--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -87,6 +87,7 @@ run.test.classpath=\
 runmain.jvmargs=
 source.encoding=UTF-8
 source.root=.
+src.java.dir=src/java
 test.src.dir=
 war.content.additional=
 war.ear.name=${war.name}
